# Opencv

./: CMakeLists.txt  readmine  ssh.tar
opencv-2.4.13/samples/c/example_cmake/: CMakeCache.txt  Makefile  cmake_install.cmake  opencv_example
